220712 register.js working... > have to solve idOverlapCheck, register process

--- a/client/style.css
+++ b/client/style.css
@@ -30,7 +30,7 @@ body{
 }
 
 
-.login{
+.login,.register{
     margin-top: 30vh;
     /* display:flex; align-items: center; flex-direction:column; */
 }
